fixed overflow issue

--- a/undeck/src/index.css
+++ b/undeck/src/index.css
@@ -17,6 +17,7 @@ body {
   background-color: #baa8ca;
   min-height: 100%;
   position: relative;
+  overflow-x: hidden;
 }
 
 body,
